@@ -1,5 +1,9 @@
 2010-08-14  Asa Ayers  <Asa.Ayers@Gmail.com>
 
+- Ticket 30 (related to #23) - ItemAuditor is back to counting items in the mailbox, but will subtract items purchased from the AH or COD mail from its item counts.
+
+2010-08-14  Asa Ayers  <Asa.Ayers@Gmail.com>
+
 - Ticket 29 - Changed the Insufficient COD alert to use a case-insensitive comparison on character names. 
 
 2010-08-12  Asa Ayers  <Asa.Ayers@Gmail.com>
